# FakeNews-TT2

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 05a047ab6769_.py  0a275df908a2_.py
backend/: config.py  constant.py  main.py  models.py
backend/ETL/: noticias_redes_sociales_filtered.csv  noticias_redes_sociales_sentiment_analysis.csv  text_feature_extractor.py
backend/data/: blacklist_x.json  modelos_originales.json  modelos_originales_no_sentiment.json  modelos_originales_sentiment.json  stopwords.json  temas_intereses.json  whitelist_x.json
backend/database/: FakeNewsTT2.db  connection.py  db_models.py  use_cases.py
backend/routes/: csv_processing_routes.py  emol_routes.py  noticia_routes.py  train_models.py  x_routes.py  x_scrapper_routes.py
backend/scrapper/: EmolScrapper.py  XScrapper.py  x_scrapper.py
backend/services/: EmolService.py  FileService.py  ModelFineTuning.py  ModelTraining.py  ModelTraining_old.py  TextProcessingService.py  TrainingResultsViz.py  TrainingResultsVizFinal.py  TweetService.py
backend/services/pipelines/: base_pipeline.py  boosting_pipeline.py  lr_pipeline.py  nn_pipeline.py  svm_pipeline.py
backend/services/pipelines/no_sentiment/: base_pipeline.py  boosting_pipeline.py  boosting_pipeline_v2.py  lr_pipeline.py  nn_pipeline.py  svm_pipeline.py
backend/services/pipelines/sentiment/: base_pipeline.py  boosting_pipeline.py  lr_pipeline.py  nn_pipeline.py  svm_pipeline.py
backend/utils/: response_models.py
