[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Proyecto para Trabajo de Titulo 2 2024"
authors = ["axeloon <axelquezadac@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.46.0"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
spacy = "^3.8.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
